--- a/my-app/src/components/Exercises/style.css
+++ b/my-app/src/components/Exercises/style.css
@@ -1,13 +1,11 @@
-.card {
+/* .card {
   
 
     display: flex;
-    flex-direction: column;
-    align-content: center;
-    justify-content: center;
-    width: 30%;
-    margin: 32px 15px;
-    padding: 10px;
+    display: grid;
+    grid-template-columns: repeat(3,1fr);
+    gap: 1rem;
+    width: 10%;
     border-radius: 10px;
     background-color: black;
     transition: 1s;
@@ -23,3 +21,62 @@
     width: 100%;
     justify-content: space-around;
 }
+
+
+
+ .profile{
+  width: 100%;
+  padding: 10% 2rem;
+}
+.card-show{
+  display: grid;
+  grid-template-columns: repeat(3,1fr);
+  gap: 1.6rem;
+  width: 100%;
+} */
+
+
+
+.mainwrapper{
+  width: 100%;
+  display: grid;
+  grid-template-columns: repeat(3,1fr);
+  /* gap: 1.6rem; */
+  justify-content: space-around;
+  align-items: center;
+  /* margin: 5rem 0; */
+  /* flex-wrap: wrap; */
+}
+.full:hover {
+  transform: scale(1.03);
+  cursor: pointer;
+}
+.full {
+  width: 70%;
+  height: 460;
+  border-radius: 10px;
+  box-shadow: 0px 7px 0px 0px #413a3b;
+  border: 5px solid #050774;
+  margin-bottom: 1rem;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  align-items: center;
+  transition: 1s;
+  /* padding: 1rem 0; */
+}
+.imag{
+  max-width: 100%;
+  max-height: 100%;
+}
+#but{
+  margin-top: 5%;
+}
+.slah{
+  border-radius: 100%;
+}
+/* * {
+  width: auto;
+  height: auto;
+  box-sizing: border-box;
+} */
