--- a/my-app/src/components/Navbar/style.css
+++ b/my-app/src/components/Navbar/style.css
@@ -4,10 +4,10 @@
   margin: 20px;
   padding: 5px;
 }
-.ul li:hover {
+/* .ul li:hover {
   background-color: rgba(0, 0, 0, 0.164);
   border-radius: 20px;
-}
-.logo{
+} */
+/* .logo{
 background-color: rgb(0, 0, 0);
-}
+} */
