--- a/my-app/src/components/Profile/style.css
+++ b/my-app/src/components/Profile/style.css
@@ -1,5 +1,5 @@
-/* Import Font Dancing Script */
-@import url(https://fonts.googleapis.com/css?family=Dancing+Script);
+/* Import Font Dancing Script
+@import url(https://fonts.googleapis.com/css?family=Dancing+Script); */
 
 * {
     margin: 0;
