--- a/my-app/src/components/Exerciesdesc/style.css
+++ b/my-app/src/components/Exerciesdesc/style.css
@@ -1,6 +1,7 @@
 .profile{
     /*width: 100%;*/
-    padding: 10% 2rem;
+    margin-bottom: 150px;
+    margin-left: 100px;
 }
 .card-show{
     display: grid;
