--- a/my-app/src/components/Login/style.css
+++ b/my-app/src/components/Login/style.css
@@ -21,7 +21,7 @@
   min-width: 100%;
   min-height: 100%;
   z-index: -1;
-  filter: opacity(15%);
+  filter: opacity(50%);
 }
 
   html {
@@ -43,11 +43,12 @@
   strong {
     font-weight: 600;
   }
-  
+  /* يغير البوكس الداخل الاسم والايميل */
   .overlay {
-    width: 100%;
+    width: 90%;
     max-width: 1140px;
     max-height: 640px;
+    margin-top: 10vh;
     padding: 8rem 6rem;
     display: flex;
     align-items: center;
@@ -70,7 +71,7 @@
     margin-bottom: 2rem;
   }
   
-  .text-gradient {
+  #text-gradient {
   
     background-image: linear-gradient(
         45deg,
@@ -357,7 +358,7 @@
   
   .login input[type="password"],
   .login input[type="text"] {
-    background-color: #c1d9f900;
+    background-color: #293e5a00;
     margin-bottom: 15px;
     border-bottom: solid 0.1px #d2d2d2;
     border-radius: 10px;
@@ -386,6 +387,7 @@
     width:100%;
     color:#fff;
     display:block;
+   
   }
   .login-form .group .input,
   .login-form .group .button{
@@ -441,19 +443,24 @@
    
     /* 2 */
     .btn-2 {
-    background: rgb(96,9,240);
-    background: linear-gradient(0deg, rgba(96,9,240,1) 0%, rgba(129,5,240,1) 100%);
+    background: rgb(214, 213, 218);
+    background: linear-gradient(0deg, rgb(215, 210, 223) 0%, rgba(129,5,240,1) 100%);
     border: none;
+    justify-content:center;
     
     }
     .btn-2:before {
     height: 0%;
     width: 2px;
+    justify-content:center;
     }
     .btn-2:hover {
     box-shadow:  4px 4px 6px 0 rgba(255,255,255,.5),
           -4px -4px 6px 0 rgba(116, 125, 136, .5), 
       inset -4px -4px 6px 0 rgba(255,255,255,.2),
       inset 4px 4px 6px 0 rgba(0, 0, 0, .4);
+    }
+    #but-lift{
+      margin-left:23%;
     }
     
