--- a/my-app/src/components/Advices/style.css
+++ b/my-app/src/components/Advices/style.css
@@ -1,4 +1,4 @@
-@import url(https://fonts.googleapis.com/css?family=Open+Sans:700,300);
+/* @import url(https://fonts.googleapis.com/css?family=Open+Sans:700,300);
 .frame {
   position: absolute;
   top: 50%;
@@ -86,4 +86,4 @@ ul .checkmark {
   stroke-dasharray: 30 30;
   stroke-dashoffset: 30;
   transition: all 0.5s ease-out;
-}
+} */
