--- a/my-app/src/components/Profile/style.css
+++ b/my-app/src/components/Profile/style.css
@@ -1,23 +1,14 @@
-/* Import Font Dancing Script
-@import url(https://fonts.googleapis.com/css?family=Dancing+Script); */
-
-* {
-    margin: 0;
-}
 
 body {
     font-family: Arial;
-    /* overflow: hidden; */
+   
 }
-
-/* NavbarTop */
-.navbar-top {
-    background-color: #fff;
-    color: #333;
-    box-shadow: 0px 4px 8px 0px grey;
-    height: 70px;
+.listprofile{
+    margin-bottom:40px;
 }
-
+.card{
+    margin-bottom:40px;
+}
 .title {
     font-family: 'Dancing Script', cursive;
     padding-top: 15px;
@@ -57,8 +48,8 @@ body {
 /* End */
 
 /* Sidenav */
-.sidenav {
-    background-color: #fff;
+/* .sidenav {
+    background-color: rgb(20, 16, 16);
     color: #333;
     border-bottom-right-radius: 25px;
     height: 86%;
@@ -68,36 +59,42 @@ body {
     position: absolute;
     top: 70px;
     width: 250px;
-}
+} */
 
 .profile {
-    margin-bottom: 20px;
+    /* margin-bottom: 20px;
     margin-top: 150px;
-    text-align: center;
+    text-align: center; */
 }
 
 .profile img {
-    border-radius: 50%;
-    box-shadow: 0px 0px 5px 1px grey;
+    /* border-radius: 30%; */
+    box-shadow: 0px 0px 5px 1px rgb(77, 74, 74);
+    display: flex;
+    justify-content:center;
 }
 
-.name {
+.userImg{
+    border-radius: 30%;
+}
+
+/* .name {
     font-size: 20px;
     font-weight: bold;
     padding-top: 20px;
-}
+} */
 
-.job {
+/* .job {
     font-size: 16px;
     font-weight: bold;
     padding-top: 10px;
-}
+} */
 
 .url, hr {
     text-align: center;
 }
 
-.url hr {
+/* .url hr {
     margin-left: 20%;
     width: 60%;
 }
@@ -109,36 +106,19 @@ body {
     margin: 10px 0;
     padding: 6px 8px;
     text-decoration: none;
-}
+} */
 
-.url a:hover, .url .active {
-    background-color: #e8f5ff;
-    border-radius: 28px;
-    color: #000;
-    margin-left: 14%;
-    width: 65%;
-}
 
-/* End */
-
-/* Main */
-.main {
-    margin-top: 2%;
-    margin-left: 29%;
-    font-size: 28px;
-    padding: 0 10px;
-    width: 58%;
-}
 
 .main h2 {
     color: #333;
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-    font-size: 24px;
-    margin-bottom: 10px;
+    font-size: 10px;
+
 }
 
 .main .card {
-    background-color: #fff;
+    background-color: rgba(48, 37, 37, 0.041);
     border-radius: 18px;
     box-shadow: 1px 1px 8px 0 grey;
     height: auto;
@@ -148,7 +128,6 @@ body {
 
 .main .card table {
     border: none;
-    font-size: 16px;
     height: 270px;
     width: 80%;
 }
@@ -167,7 +146,7 @@ body {
 .social-media span {
     margin: 0 10px;
 }
-
+/* 
 .fa-facebook:hover {
     color: #4267b3 !important;
 }
@@ -194,7 +173,6 @@ body {
 
 .fa-snapchat:hover {
     color: #fffb01 !important;
-}
+} */
 
 /* End */
-
