--- a/my-app/src/components/Profile/style.css
+++ b/my-app/src/components/Profile/style.css
@@ -61,11 +61,11 @@ body {
     width: 250px;
 } */
 
-.profile {
+/* .profile { */
     /* margin-bottom: 20px;
     margin-top: 150px;
     text-align: center; */
-}
+/* } */
 
 .profile img {
     /* border-radius: 30%; */
