--- a/my-app/src/App.css
+++ b/my-app/src/App.css
@@ -1,20 +1,45 @@
+@font-face {
+    font-family: 'Lato';
+    font-style: normal;
+    font-weight: 300;
+    font-display: swap;
+    src: url(res/fonts/Lato-Light.ttf);
+}
 
-    body {
-      max-width: 1920px;
-      height: 100%;
-      display: grid;
-      place-items: center;
-      padding: 0;
-      font-family: var(--font-family);
-      color: var(--dark-color);
-      background: var(--bg-gradient);
-    }
-    
-    * {
-      margin: 0;
-      padding: 0;
-      box-sizing: border-box;
-    }
+/* latin-ext */
+@font-face {
+    font-family: 'Lato';
+    font-style: normal;
+    font-weight: 400;
+    font-display: swap;
+    src: url(res/fonts/Lato-Regular.ttf);
+}
+
+/* latin-ext */
+@font-face {
+    font-family: 'Lato';
+    font-style: normal;
+    font-weight: 700;
+    font-display: swap;
+    src: url(res/fonts/Lato-Bold.ttf);
+}
+
+body {
+    max-width: 1920px;
+    height: 100%;
+    display: grid;
+    place-items: center;
+    padding: 0;
+    font-family: Lato, sans-serif;
+    color: var(--dark-color);
+    background: var(--bg-gradient);
+}
+
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
 
   
 
