--- a/my-app/src/components/Exercises/style.css
+++ b/my-app/src/components/Exercises/style.css
@@ -1,82 +1,84 @@
-/* .card {
-  
-
-    display: flex;
+.exercises-screen {
+    width: 100vw;
+    height: 100vh;
+    background: url("../../imges/boxing.jpg");
+    background-size: 100% auto;
+    background-repeat: no-repeat;
+    color: white;
+    margin: 0;
     display: grid;
-    grid-template-columns: repeat(3,1fr);
-    gap: 1rem;
-    width: 10%;
-    border-radius: 10px;
-    background-color: black;
-    transition: 1s;
-  }
-  
-  .card:hover {
-    transform: scale(1.03);
-    cursor: pointer;
-  }
-  .wrapper {
-    display: flex;
-    flex-wrap: wrap;
+    grid-template-columns: 2fr;
+    position: relative;
+    padding: 0 10%;
+    align-content: center;
+}
+
+.section-title {
+    text-transform: uppercase;
+    font-weight: bold;
+    letter-spacing: 2px;
+}
+
+.section-title span {
+    color: orangered;
+    border: none;
+}
+
+.exercises-scroll-down {
+    width: 34px;
+    height: 34px;
+    position: absolute;
+    bottom: 0;
+    left: 50%;
+    transform: translateY(-100%);
+    color: orangered;
+    background: white;
+    border-radius: 100%;
+    font-size: 34px;
+}
+
+.section-exercises {
+    padding: 100px 10%;
+}
+
+.exercises-container {
+    gap: 5%;
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    padding-bottom: 100px;
+    align-items: center;
     width: 100%;
-    justify-content: space-around;
 }
 
+.exercise-card-img {
+    width: 100%;
+    filter: grayscale(1);
+    clip-path: polygon(0 14%, 100% 0, 100% 100%, 0% 100%);
+    transition: all 300ms;
+}
 
+.exercise-card:hover .exercise-card-img {
+    filter: grayscale(0);
+    clip-path: polygon(0 0, 100% 13%, 100% 100%, 0% 100%);
+    cursor: pointer;
+}
 
- .profile{
-  width: 100%;
-  padding: 10% 2rem;
+.exercise-card {
+    position: relative;
 }
-.card-show{
-  display: grid;
-  grid-template-columns: repeat(3,1fr);
-  gap: 1.6rem;
-  width: 100%;
-} */
 
-
-
-.mainwrapper{
-  width: 100%;
-  display: grid;
-  grid-template-columns: repeat(3,1fr);
-  /* gap: 1.6rem; */
-  justify-content: space-around;
-  align-items: center;
-  /* margin: 5rem 0; */
-  /* flex-wrap: wrap; */
+.exercise-card-text {
+    position: absolute;
+    bottom: 16px;
+    left: 0;
+    background: white;
+    padding: 6px 32px;
+    width: 100%;
+    text-align: center;
+    font-size: 24px;
+    display: inline-block;
 }
-.full:hover {
-  transform: scale(1.03);
-  cursor: pointer;
+.spacer{
+    width: 100%;
+    height: 100px;
 }
-.full {
-  width: 70%;
-  height: 460;
-  border-radius: 10px;
-  box-shadow: 0px 7px 0px 0px #413a3b;
-  border: 5px solid #050774;
-  margin-bottom: 1rem;
-  display: flex;
-  flex-direction: column;
-  justify-content: space-between;
-  align-items: center;
-  transition: 1s;
-  /* padding: 1rem 0; */
-}
-.imag{
-  max-width: 100%;
-  max-height: 100%;
-}
-#but{
-  margin-top: 5%;
-}
-.slah{
-  border-radius: 100%;
-}
-/* * {
-  width: auto;
-  height: auto;
-  box-sizing: border-box;
-} */
