--- a/my-app/src/components/Home/style.css
+++ b/my-app/src/components/Home/style.css
@@ -2,24 +2,125 @@
     width: 100vw;
     height: 100vh;
     object-fit: cover;
-    position: fixed;
+    position: absolute;
     left: 0;
-    right: 0;
     top: 0;
-    bottom: 0;
-    z-index: -3;
-    background-color: rgb(0, 0, 0);
-    /* opacity: 0.7; */
-  }
-  .bggg {
+    z-index: -10;
+}
+
+.welcome-screen {
     width: 100vw;
     height: 100vh;
-    object-fit: cover;
-    position: fixed;
-    left: 0;
-    right: 0;
-    top: 0;
-    bottom: 0;
     z-index: -2;
-    background-color: rgba(0, 0, 0, 0.089);
-  }
+    background-color: rgba(0, 0, 0, 0.11);
+    display: flex;
+    align-content: center;
+    align-items: end;
+}
+
+.welcome-text {
+    margin: 0 auto;
+    z-index: 1;
+    color: white;
+    font-size: 32px;
+    text-transform: uppercase;
+    font-weight: bold;
+    letter-spacing: 16px;
+    transform: translateY(-16px);
+}
+.welcome-text span {
+    font-size: 72px;
+}
+.welcome-section{
+    position: relative;
+}
+.scroll-down{
+
+    width: 100%;
+    height: 32px;
+    background: orangered;
+    display: flex;
+    justify-content: center;
+}
+.scroll-down span{
+    color: orangered;
+    font-size: 32px;
+    background: white;
+    border-radius: 100%;
+    text-align: center;
+}
+.top-exercises{
+    background: orangered;
+    color: white;
+    display: flex;
+    flex-direction: column;
+    padding: 12px 20%;
+    box-shadow: 0 0 64px 16px orangered;
+    height: 100vh;
+}
+.section-title{
+    margin: 64px 0;
+    font-size: 42px;
+
+}
+.cards-container{
+    margin-top: 32px;
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+    gap: 10%;
+}
+.card{
+    width: 100%;
+    border: 1px white solid;
+    color: white;
+    border-radius: 10px;
+    padding: 32px;
+    display: flex;
+    flex-direction: column;
+    box-shadow: 0 0 26px 3px rgba(0, 0, 0, 0.3);
+    text-align: justify;
+    justify-content: space-between;
+
+}
+.cards-container .active{
+    background: white;
+    color: orangered;
+}
+.card-title{
+    font-weight: bold;
+    font-size: 24px;
+    letter-spacing: 2px;
+}
+.card-desc{
+    text-align: justify;
+    font-size: 18px;
+}
+.card span{
+    padding: 16px;
+    align-self: center;
+    font-size: 42px;
+    color: orangered;
+    background: white;
+    border-radius: 6px;
+    box-shadow: 0 0 16px 0 rgba(0, 0, 0, 0.43);
+    margin-bottom: 36px;
+}
+.card:nth-child(2) span {
+    color: white;
+    background: orangered;
+}
+.card .learn-more-link{
+    color: orangered;
+    align-self: start;
+    background: white;
+    border-radius: 16px;
+    width: auto;
+    height: auto;
+    padding: 8px 16px;
+    margin: 16px 0 0 0;
+    text-decoration: none;
+}
+.card:nth-child(2) .learn-more-link {
+    background: orangered;
+    color: white;
+}
