--- a/my-app/src/components/Login/style.css
+++ b/my-app/src/components/Login/style.css
@@ -1,466 +1,128 @@
-:root {
-    --dark-color: hsl(var(--hue), 100%, 9%);
-    --light-color: hsl(var(--hue), 95%, 98%);
-    --base: hsl(var(--hue), 95%, 50%);
-    --complimentary1: hsl(var(--hue-complimentary1), 95%, 50%);
-    --complimentary2: hsl(var(--hue-complimentary2), 95%, 50%);
-  
-    --font-family: "Poppins", system-ui;
-  
-    --bg-gradient: linear-gradient(
-      to bottom,
-      hsl(var(--hue), 95%, 99%),
-      hsl(var(--hue), 95%, 84%)
-    );
-  }
-  #video1 {
-  position: absolute;
-  
-  right: 0;
-  bottom: 0;
-  min-width: 100%;
-  min-height: 100%;
-  z-index: -1;
-  filter: opacity(50%);
+.login-box-container {
+    display: flex;
+    margin: 0 auto;
 }
 
-  html {
-    -webkit-font-smoothing: antialiased;
-    -moz-osx-font-smoothing: grayscale;
-  }
-  
-
-  .orb-canvas {
-    position: fixed;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    pointer-events: none;
-    z-index: -1;
-  }
-  
-  strong {
-    font-weight: 600;
-  }
-  /* يغير البوكس الداخل الاسم والايميل */
-  .overlay {
-    width: 90%;
-    max-width: 1140px;
-    max-height: 640px;
-    margin-top: 10vh;
-    padding: 8rem 6rem;
-    display: flex;
-    align-items: center;
-    background: rgba(255, 255, 255, 0.375);
-    box-shadow: 0 0.75rem 2rem 0 rgba(0, 0, 0, 0.1);
-    border-radius: 2rem;
-    border: 1px solid rgba(255, 255, 255, 0.125);
-    grid: fixed;
-  }
-  
-  .overlay__inner {
-    max-width: 36rem;
-  }
-  
-  .overlay__title {
-    font-size: 1.875rem;
-    line-height: 2.75rem;
-    font-weight: 700;
-    letter-spacing: -0.025em;
-    margin-bottom: 2rem;
-  }
-  
-  #text-gradient {
-  
-    background-image: linear-gradient(
-        45deg,
-        var(--base) 25%,
-        var(--complimentary2)
-        
-      );
-  }
-  
-  .overlay__description {
-    font-size: 1rem;
-    line-height: 1.75rem;
-    margin-bottom: 3rem;
-  }
-  
-  .overlay__btns {
-    width: 100%;
-    max-width: 30rem;
-    display: flex;
-  }
-  
-  .overlay__btn {
-    width: 50%;
-    height: 2.5rem;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    font-size: 0.875rem;
-    font-weight: 600;
-    color: var(--light-color);
-    background: var(--dark-color);
-    border: none;
-    border-radius: 0.5rem;
-    transition: transform 150ms ease;
-    outline-color: hsl(var(--hue), 95%, 50%);
-  }
-  
-  .overlay__btn:hover {
-    transform: scale(1.05);
-    cursor: pointer;
-  }
-  
-  .overlay__btn--transparent {
-    background: transparent;
-    color: var(--dark-color);
-    border: 2px solid var(--dark-color);
-    border-width: 2px;
-    margin-right: 0.75rem;
-  }
-  
-  .overlay__btn-emoji {
-    margin-left: 0.375rem;
-  }
-  
-  a {
-    text-decoration: none;
-    color: var(--dark-color);
-    width: 100%;
-    height: 100%;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-  }
-  
-  /* Not too many browser support this yet but it's good to add! */
-  @media (prefers-contrast: high) {
-    .orb-canvas {
-      display: none;
-    }
-  }
-  
-  @media only screen and (max-width: 1140px) {
-    .overlay {
-      padding: 8rem 4rem;
-    }
-  }
-  
-  @media only screen and (max-width: 840px) {
-    body {
-      padding: 1.5rem;
-    }
-  
-    .overlay {
-      padding: 4rem;
-      height: auto;
-    }
-  
-    .overlay__title {
-      font-size: 1.25rem;
-      line-height: 2rem;
-      margin-bottom: 1.5rem;
-    }
-  
-    .overlay__description {
-      font-size: 0.875rem;
-      line-height: 1.5rem;
-      margin-bottom: 2.5rem;
-    }
-  }
-  
-  @media only screen and (max-width: 600px) {
-    .overlay {
-      padding: 1.5rem;
-    }
-  
-    .overlay__btns {
-      flex-wrap: wrap;
-    }
-  
-    .overlay__btn {
-      width: 100%;
-      font-size: 0.75rem;
-      margin-right: 0;
-    }
-  
-    .overlay__btn:first-child {
-      margin-bottom: 1rem;
-    }
-    
-  }
-  
-  
-  /* config.css */
-  
-  :root {
-    --baseColor: #000;
-  }
-  
-  /* helpers/align.css */
-  
-  .align {
-    display: grid;
-    place-items: center;
-  }
-  
-  .grid {
-    inline-size: 90%;
-    margin-inline: auto;
-    max-inline-size: 20rem;
-  }
-  
-  /* helpers/hidden.css */
-  
-  .hidden {
-    border: 0;
-    clip: rect(0 0 0 0);
-    height: 1px;
-    margin: -1px;
-    overflow: hidden;
-    padding: 0;
+.login-background-video {
+    width: 100vw;
+    height: auto;
+    object-fit: cover;
     position: absolute;
-    width: 1px;
-  }
-  
-  /* helpers/icon.css */
-  
-  :root {
-    --iconFill: var(--baseColor);
-  }
-  
-  .icons {
-    display: none;
-  }
-  
-  .icon {
-    block-size: 1em;
-    display: inline-block;
-    fill: var(--iconFill);
-    inline-size: 1em;
-    vertical-align: middle;
-  }
-  
-  /* layout/base.css */
-  
-  :root {
-    --htmlFontSize: 100%;
-  
-    --bodyBackgroundColor: #c0d4f0;
-    --bodyColor: var(--baseColor);
-    --bodyFontFamily: "Open Sans";
-    --bodyFontFamilyFallback: sans-serif;
-    --bodyFontSize: 0.875rem;
-    --bodyFontWeight: 400;
-    --bodyLineHeight: 1.5;
-  }
-  
-  * {
-    box-sizing: inherit;
-  }
-  
-  html {
-    box-sizing: border-box;
-    font-size: var(--htmlFontSize);
-  }
-  
-  /* modules/anchor.css */
-  
-  :root {
-    --anchorColor: #eee;
-  }
-  
-  a {
-    color: #ff0000;
-    outline: 0;
-    text-decoration: none;
-  }
-  
-  a:focus,
-  a:hover {
-    text-decoration: underline;
-  }
-  
-  /* modules/form.css */
-  
-  :root {
-    --formGap: 0.875rem;
-  }
-  
-  input {
-    background-image: none;
-    border: 0;
-    color: inherit;
-    font: inherit;
-    margin: 0;
-    outline: 0;
-    padding: 0;
-    transition: background-color 0.3s;
-  }
-  
-  input[type="submit"] {
-    cursor: pointer;
-  }
-  
-  .form {
+    left: 0;
+    top: 0;
+    z-index: -10;
+}
+
+.login-container {
+    background: white;
+}
+
+.section-login {
     display: grid;
-    gap: var(--formGap);
-  }
-  
-  .form input[type="password"],
-  .form input[type="text"],
-  .form input[type="submit"] {
-    inline-size: 100%;
-  }
-  
-  .form__field {
-    display: flex;
-  }
-  
-  .form__input {
-    flex: 1;
-  }
-  
-  /* modules/login.css */
-  
-  :root {
-    --loginBorderRadus: 0.25rem;
-    --loginColor: #000;
-    --loginInputBackgroundColor: #c1d9f9;
-    --loginInputHoverBackgroundColor: #434a52;
-    --loginLabelBackgroundColor: #363b41;
-    --loginSubmitBackgroundColor: #23212b;
-    --loginSubmitColor: #fff;
-    --loginSubmitHoverBackgroundColor: #60626d;
-  }
-  
-  .login {
-    color: var(--loginColor);
-  }
-  
-  .login label,
-  .login input[type="text"],
-  .login input[type="password"],
-  .login input[type="submit"] {
-    border-radius: var(--loginBorderRadus);
-    padding: 1rem;
-  }
-  
-  .login label {
-    border-bottom-right-radius: 0;
-    border-top-right-radius: 0;
-    padding-inline: 1.25rem;
-    margin-bottom: 15px;
-  }
-  
-  .login input[type="password"],
-  .login input[type="text"] {
-    background-color: #293e5a00;
-    margin-bottom: 15px;
-    border-bottom: solid 0.1px #d2d2d2;
-    border-radius: 10px;
-  }
-  
-  .login input[type="submit"] {
-    background-color: var(--loginSubmitBackgroundColor);
-    color: var(--loginSubmitColor);
-    font-weight: 700;
-    text-transform: uppercase;
-  }
-  
-  .login input[type="submit"]:focus,
-  .login input[type="submit"]:hover {
-    background-color: var(--loginSubmitHoverBackgroundColor);
-  }
-    
-  p {
-    margin-block: 1.5rem;
-  }
-  
-  .text--center {
-    text-align: center;
-  }
-  .login-form .group .button{
-    width:100%;
-    color:#fff;
-    display:block;
-   
-  }
-  .login-form .group .input,
-  .login-form .group .button{
-    border:none;
-    padding:15px 20px;
-    border-radius:25px;
-    background:rgba(255,255,255,.1);
-  }
-  
-  .login-form .group .button{
-    background:#3b3b68;
-  }
-  
-   button {
-    margin: 20px;
-    }
-  .login-form .group .button{
-    text-transform:uppercase;
-  }
-  .login-html .tab{
-    font-size:22px;
-    margin-right:15px;
-    padding-bottom:5px;
-    margin:0 15px 10px 0;
-    display:inline-block;
-    border-bottom:2px solid transparent;
-  }
+    grid-template-columns: 1fr 1fr;
+    width: 960px;
+    /*position: absolute;*/
+    /*top: 50%;*/
+    /*left: 50%;*/
+    /*transform: translate(-50%, -40%);*/
 
-
-  button {
-    margin: 20px;
-    }
-    .custom-btn {
-    width: 130px;
-    height: 40px;
-    color: #fff;
-    border-radius: 5px;
-    padding: 10px 25px;
-    font-family: 'Lato', sans-serif;
-    font-weight: 500;
-    background: transparent;
-    cursor: pointer;
-    transition: all 0.3s ease;
+    margin-top: 18%;
+    border-radius: 16px;
+    background: white;
+    overflow: hidden;
+}
+.section-login-image{
     position: relative;
-    display: inline-block;
-     box-shadow:inset 2px 2px 2px 0px rgba(255,255,255,.5),
-     7px 7px 20px 0px rgba(0,0,0,.1),
-     4px 4px 5px 0px rgba(0,0,0,.1);
-    outline: none;
-    }
-    
-  
-   
-    /* 2 */
-    .btn-2 {
-    background: rgb(214, 213, 218);
-    background: linear-gradient(0deg, rgb(215, 210, 223) 0%, rgb(255 2 2) 100%);
+    overflow: hidden;
+}
+.section-login-image p {
+
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, 0);
+    z-index: 100;
+    text-transform: uppercase;
+    font-weight: bold;
+    word-spacing: 6px;
+    letter-spacing: 3px;
+    width: 150%;
+    text-align: center;
+    line-height: 32px;
+    font-family: serif;
+    font-size: 22px;
+    background: white;
+    color: orangered;
+}
+.section-login-image span{
+    font-size: 42px;
+    color: black;
+    font-weight: bolder;
+}
+.section-login-image img{
+    width: 100%;
+    filter: brightness(0.5) grayscale(0);
+    border-radius: 0 10px 10px 0;
+    background: rgba(0, 0, 0, 0.5);
+    clip-path: polygon(9% 0, 100% 0, 100% 100%, 0% 100%);
+    z-index: -1;
+    height: 100%;
+}
+.login-form{
+    margin-top: 30%;
+}
+
+.login-container {
+    border-radius: 10px 0 0 10px;
+    display: flex;
+    flex-direction: column;
+    padding: 32px;
+}
+.login-container h1{
+    color: #505050;
+}
+.login-container p {
+    margin-top: 16px;
+    color: #a7a7a7;
+}
+.input-field{
+    width: 100%;
     border: none;
-    justify-content:center;
-    
-    }
-    .btn-2:before {
-    height: 0%;
-    width: 2px;
-    justify-content:center;
-    }
-    .btn-2:hover {
-    box-shadow:  4px 4px 6px 0 rgba(255,255,255,.5),
-          -4px -4px 6px 0 rgba(116, 125, 136, .5), 
-      inset -4px -4px 6px 0 rgba(255,255,255,.2),
-      inset 4px 4px 6px 0 rgba(0, 0, 0, .4);
-    }
-    #but-lift{
-      margin-left:23%;
-    }
-    
+    border-bottom: 1px orangered solid;
+    padding: 8px 0;
+    outline: none;
+    font-size: 16px;
+}
+.forgot-submit{
+    margin-top: 26px;
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    gap: 32px;
+    justify-items: center;
+}
+.submit-btn{
+    border: none;
+    width: 100%;
+    font-size: 16px;
+    color:white;
+    background: orangered;
+    border-radius: 6px;
+    padding: 8px 0;
+    letter-spacing: 3px;
+    font-weight: bolder;
+}
+
+.forget-pass, .forget-pass:visited, .forget-pass:hover{
+    color: orangered;
+    text-decoration: none;
+    margin-top: 16px;
+}
+.not-member{
+    width: 100%;
+    text-align: center;
+    margin-top: 16px;
+    letter-spacing: 2px;
+    display: inline-block;
+
+
+}
