--- a/my-app/src/components/Register/style.css
+++ b/my-app/src/components/Register/style.css
@@ -1,3 +1,22 @@
 .backIcon{
     margin-right: 90%;
 }
+.section-login .flip span {
+    font-size: 24px;
+    color: orangered;
+}
+.section-login .flip p {
+    font-size: 16px;
+    width: 100%;
+    color: black;
+}
+.section-login .flip img{
+    clip-path: polygon(0 0, 91% 0, 100% 100%, 0% 100%);
+    filter: grayscale(1) brightness(0.8);
+}
+.password-group{
+    width: 100%;
+    display: flex;
+    gap: 16px;
+    margin-bottom: 32px;
+}
