--- a/src/components/Information/style.css
+++ b/src/components/Information/style.css
@@ -1,3 +1,13 @@
 .radio{
     margin-top: 32px!important;
 }
+.login-background-video-information {
+    overflow: hidden;
+    width: 150%;
+    height: auto;
+    object-fit: contain;
+    position: absolute;
+    left: 0;
+    top: 0;
+    z-index: -10;
+}
