--- a/src/components/Profile/style.css
+++ b/src/components/Profile/style.css
@@ -1,9 +1,7 @@
 .fake-body {
     display: flex;
-    justify-items: center;
     justify-content: center;
-    align-items: center;
-    align-content: center;
+    align-items: end;
     width: 100vw;
     height: 100vh;
 }
@@ -15,9 +13,9 @@
     z-index: -10000;
     width: 100vw;
     height: 100vh;
-    background: url("https://images.pexels.com/photos/7031705/pexels-photo-7031705.jpeg?auto=compress&cs=tinysrgb&dpr=2&w=500") no-repeat;
+    background: url("https://images.pexels.com/photos/669578/pexels-photo-669578.jpeg?auto=compress&cs=tinysrgb&dpr=2&w=500") no-repeat;
     background-size: cover;
-    background-color: rgba(0, 0, 0, 0.3);
+    background-color: rgb(71, 70, 70);
 }
 
 .section-profile {
@@ -25,8 +23,9 @@
     grid-template-columns: 1fr 1fr;
     background: white;
     border-radius: 10px;
-    margin: 0;
+    margin: 0 auto;
     width: 50%;
+
 }
 
 .profile-container {
@@ -40,7 +39,7 @@
 .profile-item {
     display: grid;
     grid-template-columns: 1fr 1fr;
-    gap: 10vw;
+    gap: 5vw;
 }
 
 .profile-item h1 {
@@ -65,7 +64,7 @@
 
 .profile-photo img {
     width: 100%;
-    height: 500px;
+    height:100%;
     object-fit: cover;
 }
 
