--- a/src/components/Navbar/style.css
+++ b/src/components/Navbar/style.css
@@ -68,3 +68,38 @@
     cursor: default;
     margin: 0;
 }
+@media screen and (max-width: 425px) {
+   
+    .navbar-header{
+        display: grid;
+        grid-template-rows: 1fr 1fr 1fr 1fr;
+        width: 100;
+        height: 7rem;
+        background: rgba(196, 135, 135, 0.8);
+        position: fixed;
+        z-index: 10;
+       top:0;
+       font-size:13px;
+       size:11px
+    }
+    .header-container{
+        display: flex;
+        flex-direction: columns;
+        /* grid-template-columns: 1fr 3fr 1fr; */
+        align-items: center;
+        /* justify-items: center; */
+        /* padding: 6px 64px; */
+    }
+    .navbar-list {
+        list-style: none;
+        display: flex;
+        flex-direction: row;
+        margin: 0 auto;
+        font-size: 12px;
+        /* gap: 32px; */
+        /* align-items: center; */
+        /* align-content: center; */
+        /* flex-wrap: wrap; */
+        background: none;
+    }
+}
