--- a/src/components/Profile/style.css
+++ b/src/components/Profile/style.css
@@ -17,15 +17,24 @@
     background-size: cover;
     background-color: rgb(71, 70, 70);
 }
-/* button{
-    background: #52D6DE;
+button{
+    background: #fffefe;
     border: none;
     font-size: 18px;
-    color: white;
+    color: rgb(0, 0, 0);
     border-radius: 6px;
     padding: 6px 38px;
     align-self: center;
-} */
+}
+.Change_button{
+    background: orangered;
+    border: none;
+    font-size: 18px;
+    color: rgb(255, 255, 255);
+    border-radius: 20px;
+    padding: 6px 38px;
+    align-self: center;
+}
 
 .section-profile {
     display: grid;
@@ -40,7 +49,7 @@
 .profile-container {
     display: flex;
     flex-direction: column;
-    gap: 16px;
+    gap: 9px;
     padding: 16px;
     border-radius: 10px;
 }
