--- a/src/components/Profile/style.css
+++ b/src/components/Profile/style.css
@@ -6,6 +6,13 @@
     height: 100vh;
 }
 
+.profileBody {
+    width: 100%;
+    height: 110vh;
+    background: url("https://images.pexels.com/photos/669578/pexels-photo-669578.jpeg?auto=compress&cs=tinysrgb&dpr=2&w=500") no-repeat;
+    background-size: cover;
+} 
+
 .profile-background {
     position: absolute;
     top: 0;
