--- a/src/components/Home/style.css
+++ b/src/components/Home/style.css
@@ -1,144 +1,146 @@
 .videoInsideDec {
-    width: 100vw;
-    height: 100vh;
-    object-fit: cover;
-    position: absolute;
-    left: 0;
-    top: 0;
-    z-index: -90;
+  width: 100vw;
+  height: 100vh;
+  object-fit: cover;
+  position: absolute;
+  left: 0;
+  top: 0;
+  z-index: -90;
 }
 
 .welcome-screen {
-    width: 100vw;
-    height: 100vh;
-    z-index: -2;
-    background-color: rgba(0, 0, 0, 0.3);
-    display: flex;
-    align-content: center;
-    align-items: end;
+  width: 100vw;
+  height: 100vh;
+  z-index: -2;
+  background-color: rgba(0, 0, 0, 0.3);
+  display: flex;
+  align-content: center;
+  align-items: end;
 }
 
 .welcome-text {
-    margin: 0 auto;
-    z-index: 1;
-    color: white;
-    font-size: 32px;
-    text-transform: uppercase;
-    font-weight: bold;
-    letter-spacing: 16px;
-    transform: translateY(-16px);
+  margin: 0 auto;
+  z-index: 1;
+  color: white;
+  font-size: 32px;
+  text-transform: uppercase;
+  font-weight: bold;
+  letter-spacing: 16px;
+  transform: translateY(-16px);
 }
 .welcome-text span {
-    font-size: 72px;
+  font-size: 72px;
 }
-.welcome-section{
-    position: relative;
+.welcome-section {
+  position: relative;
 }
-.scroll-down{
-
-    width: 100%;
-    height: 32px;
-    background: none;
-    display: flex;
-    justify-content: center;
+.scroll-down {
+  width: 100%;
+  height: 32px;
+  background: none;
+  display: flex;
+  justify-content: center;
 }
-.scroll-down span{
-    color: white;
-    font-size: 32px;
-    background: orangered;
-    border-radius: 100%;
-    text-align: center;
+.scroll-down span {
+  color: white;
+  font-size: 32px;
+  background: orangered;
+  border-radius: 100%;
+  text-align: center;
 }
-.top-exercises{
-    background: white;
-    color: orangered;
-    display: flex;
-    flex-direction: column;
-    padding: 12px 20%;
-    height: 100vh;
+.top-exercises {
+  background: white;
+  color: orangered;
+  display: flex;
+  flex-direction: column;
+  padding: 12px 20%;
+  height: 100vh;
 }
-.section-title{
-    margin: 64px 0 0 0;
-    font-size: 26px;
-
+.section-title {
+  margin: 64px 0 0 0;
+  font-size: 26px;
 }
 
-.cards-container{
-    margin-top: 62px;
-    display: grid;
-    grid-template-columns: 1fr 1fr 1fr;
-    gap: 5%;
-    width: 100%;
+.cards-container {
+  margin-top: 62px;
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr;
+  gap: 5%;
+  width: 100%;
 }
-.card{
-    width: 90%;
-    color: orangered;
-    border-radius: 16px;
-    padding: 24px;
-    display: flex;
-    flex-direction: column;
-    box-shadow: 0 0 26px 3px rgba(0, 0, 0, 0.1);
- 
-    justify-content: space-between;
-    gap: 42px;
+.card {
+  width: 90%;
+  color: orangered;
+  border-radius: 16px;
+  padding: 24px;
+  display: flex;
+  flex-direction: column;
+  box-shadow: 0 0 26px 3px rgba(0, 0, 0, 0.1);
 
+  justify-content: space-between;
+  gap: 42px;
 }
-.cards-container .active{
-    transform: scale(1.08);
+.cards-container .active {
+  transform: scale(1.08);
 }
-.card-title{
-    font-weight: bold;
-    font-size: 18px;
-    letter-spacing: 2px;
-    text-align: center;
+.card-title {
+  font-weight: bold;
+  font-size: 18px;
+  letter-spacing: 2px;
+  text-align: center;
 }
-.card-desc{
-    font-size: 14px;
-    color: #333333;
-    word-spacing: 1px;
+.card-desc {
+  font-size: 14px;
+  color: #333333;
+  word-spacing: 1px;
 }
-.card span{
-    padding: 16px;
-    align-self: center;
-    font-size: 42px;
-    color: orangered;
-    background: white;
-    border-radius: 6px;
-    box-shadow: 0 0 16px 0 rgba(0, 0, 0, 0.43);
-    margin-bottom: 36px;
+.card span {
+  padding: 16px;
+  align-self: center;
+  font-size: 42px;
+  color: orangered;
+  background: white;
+  border-radius: 6px;
+  box-shadow: 0 0 16px 0 rgba(0, 0, 0, 0.43);
+  margin-bottom: 36px;
 }
 
-.card .learn-more-link{
-    color: orangered;
-    align-self: start;
-    background: white;
-    width: auto;
-    height: auto;
+.card .learn-more-link {
+  color: orangered;
+  align-self: start;
+  background: white;
+  width: auto;
+  height: auto;
 
-    text-decoration: none;
+  text-decoration: none;
 }
 .card:nth-child(2) .learn-more-link {
-    border-bottom: 1px orangered solid;
+  border-bottom: 1px orangered solid;
 }
-@media screen and(max-width: 800px){
-    .welcome-screen {
-        /* width: 100vw; */
-        /* height: 100vh; */
-        z-index: -2;
-        /* background-color: rgba(0, 0, 0, 0.3); */
-        display: flex;
-        align-content: center;
-        align-items: end;
-    }
-    
-    .cards-container{
-       
-        display:flex;
-        flex-direction: column;
-        width: 100%;
-        /* grid-template-columns: 1fr ;
-        gap: 5%; */
-    }
-}
-    
+@media screen and(max-width: 800px) {
+  .welcome-screen {
+    /* width: 100vw; */
+    /* height: 100vh; */
+    z-index: -2;
+    /* background-color: rgba(0, 0, 0, 0.3); */
+    display: flex;
+    align-content: center;
+    align-items: end;
+  }
 
+  .cards-container {
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+    /* grid-template-columns: 1fr ;
+        gap: 5%; */
+  }
+}
+@media screen and(max-width: 425px) {
+  .top-exercises {
+    padding: 12px 6%;
+    background-color: red;
+    flex-direction: row;
+    color:blueviolet
+  }
+}
