--- a/src/components/Navbar/style.css
+++ b/src/components/Navbar/style.css
@@ -1,105 +1,247 @@
-.navbar-header{
-    display: inline;
-    width: 100vw;
-    height: auto;
-    background: rgba(0, 0, 0, 0.80);
+.navbar-header {
+  display: inline;
+  width: 100vw;
+  height: auto;
+  background: rgba(0, 0, 0, 0.8);
+  position: fixed;
+  z-index: 10;
+  top: 0;
+  left: 0;
+}
+.header-container {
+  display: grid;
+  grid-template-columns: 1fr 3fr 1fr;
+  align-items: end;
+  justify-items: center;
+  padding: 6px 64px;
+}
+.logo-image {
+  width: 60%;
+  height: auto;
+  min-width: 44px;
+}
+.navbar-container {
+  display: flex;
+  flex-wrap: wrap;
+}
+.navbar-list {
+  list-style: none;
+  display: flex;
+  margin: 0 auto;
+  gap: 32px;
+  align-items: center;
+  align-content: center;
+  flex-wrap: wrap;
+  background: none;
+}
+.navbar-item {
+  text-transform: uppercase;
+}
+.navbar-item:hover {
+  border: none;
+}
+
+.navbar-link {
+  font-size: 18px;
+  color: white;
+  text-decoration: none;
+  transition: all 300ms;
+  border: none;
+  background: none;
+}
+.navbar-link:hover {
+  text-decoration: none;
+  color: orangered;
+  box-shadow: 0 1px 1px 0 orangered;
+}
+.navbar-link-current {
+  color: orangered;
+}
+
+.login-register .navbar-list {
+  flex-wrap: wrap;
+}
+.logout-btn {
+  font-size: 28px;
+  cursor: default;
+  margin: 0;
+}
+.login_nav {
+  display: flex;
+  gap: 20px;
+}
+.Register {
+  padding: 7px;
+  background-color: orangered;
+  font-size: 15px;
+  color: white;
+  cursor: pointer;
+}
+.Register:hover {
+  padding: 7px;
+  background-color: white;
+  font-size: 15px;
+  color: black;
+}
+.Login {
+  padding: 7px;
+  background-color: orangered;
+  font-size: 15px;
+  color: white;
+  cursor: pointer;
+}
+.Login:hover {
+  padding: 7px;
+  background-color: white;
+  font-size: 15px;
+  color: black;
+}
+/* @media screen and (max-width: 425px) {
+  .navbar-header {
+    display: grid;
+    grid-template-rows: 1fr 1fr 1fr 1fr;
+    width: 100;
+    height: 7rem;
     position: fixed;
     z-index: 10;
     top: 0;
-    left: 0;
-}
-.header-container{
-    display: grid;
-    grid-template-columns: 1fr 3fr 1fr;
-    align-items: end;
-    justify-items: center;
-    padding: 6px 64px;
-}
-.logo-image{
-    width: 60%;
-    height: auto;
-    min-width: 44px;
-}
-.navbar-container{
+    font-size: 13px;
+    size: 11px;
+  }
+  .header-container {
     display: flex;
-    flex-wrap: wrap;
-}
-.navbar-list{
+    flex-direction: columns;
+    align-items: center;
+  }
+  .navbar-list {
     list-style: none;
     display: flex;
+    flex-direction: row;
     margin: 0 auto;
-    gap: 32px;
-    align-items: center;
-    align-content: center;
-    flex-wrap: wrap;
+    font-size: 12px;
     background: none;
+  }
 }
-.navbar-item{
-    text-transform: uppercase;
-}
-.navbar-item:hover{
-    border: none
-}
-
-
-.navbar-link{
-    font-size:18px;
-    color: white;
-    text-decoration: none;
-    transition: all 300ms;
-    border: none;
-    background: none;
-}
-.navbar-link:hover{
-    text-decoration: none;
-    color: orangered;
-    box-shadow: 0 1px 1px 0 orangered;
-
-}
-.navbar-link-current{
-    color: orangered;
+.login_nav {
+  display: flex;
+  gap: 20px;
 }
 
-.login-register .navbar-list{
-    flex-wrap: wrap;
+.Login {
+  padding: 7px;
+  background-color: orangered;
+  font-size: 15px;
+  color: white;
+  cursor: pointer;
 }
-.logout-btn{
-    font-size: 28px;
-    cursor: default;
-    margin: 0;
+.Login:hover {
+  padding: 7px;
+  background-color: white;
+  font-size: 15px;
+  color: black;
 }
-@media screen and (max-width: 425px) {
-   
-    .navbar-header{
-        display: grid;
-        grid-template-rows: 1fr 1fr 1fr 1fr;
-        width: 100;
-        height: 7rem;
-        background: rgba(196, 135, 135, 0.8);
-        position: fixed;
-        z-index: 10;
-       top:0;
-       font-size:13px;
-       size:11px
+.Register {
+  padding: 7px;
+  background-color: orangered;
+  font-size: 15px;
+  color: white;
+  cursor: pointer;
+}
+.Register:hover {
+  padding: 7px;
+  background-color: white;
+  font-size: 15px;
+  color: black;
+} */
+
+@media screen and (max-width: 1024px) {
+  .header-container {
+    grid-template-columns: 1fr 4fr 1fr;
+  }
+  .navbar-link {
+    font-size: 12px;
+  }
+  .navbar-list {
+    flex-wrap: nowrap;
+  }
+}
+
+@media screen and (max-width: 768px) {
+    .header-container {
+      grid-template-columns: 1fr 4fr 1fr;
+      padding: 0 7px;
     }
-    .header-container{
-        display: flex;
-        flex-direction: columns;
-        /* grid-template-columns: 1fr 3fr 1fr; */
-        align-items: center;
-        /* justify-items: center; */
-        /* padding: 6px 64px; */
+    .navbar-link {
+      font-size: 8px;
+      gap: 20px;
     }
     .navbar-list {
-        list-style: none;
-        display: flex;
-        flex-direction: row;
-        margin: 0 auto;
-        font-size: 12px;
-        /* gap: 32px; */
-        /* align-items: center; */
-        /* align-content: center; */
-        /* flex-wrap: wrap; */
-        background: none;
+      flex-wrap: nowrap;
+      gap: 12px;
     }
+    .logo-image {
+    
+        min-width: 40px;
+    }
+   
+  }
+
+@media screen and (max-width: 425px) {
+  .header-container {
+    grid-template-columns: 1fr 6fr 1fr;
+    padding: 0 6px;
+   
+  }
+  .navbar-link {
+    font-size: 10px;
+    
+  }
+  .navbar-list {
+    flex-wrap: nowrap;
+    gap: 10px;
+    /* font-size: 2px; */
+  }
+  .navbar-item {
+    text-transform:lowercase;
 }
+.logo-image {
+    
+    min-width: 30px;
+}
+}
+
+@media screen and (max-width: 320px) {
+    .header-container {
+      grid-template-columns: 1fr 6fr 1fr;
+      padding: 0 6px;
+     
+    }
+    .navbar-link {
+      font-size: 5px;
+      
+    }
+    .navbar-list {
+      flex-wrap: nowrap;
+      gap: 10px;
+      /* font-size: 2px; */
+    }
+    .navbar-item {
+      text-transform:uppercase;
+      /* font-size:1px; */
+  }
+  .logo-image {
+      
+      min-width: 30px;
+  }
+  }
+/* @media screen and (max-width: 375px){
+    .header-container{
+        padding: 6px 7px; 
+    }
+    .navbar-list{
+        gap: 15px;
+
+    }
+
+    
+} */
