--- a/src/components/Yourexercies/style.css
+++ b/src/components/Yourexercies/style.css
@@ -1,10 +1,29 @@
 .info__button{
 
     cursor: pointer;
+    background: orangered;
+    border: none;
+    font-size: 15px;
+    color: rgb(255 255 255);
+    border-radius: 6px;
+    padding: 3px 38px;
+    align-self: center;
+    margin: 10px;
+    /* font-size: 15px; */
 }
 .info__button:hover{
-
     cursor: pointer;
-    background-color: rgba(163, 95, 5, 0.959);
-    transition:3s
+    background-color: black;
+   
 }
+/* button {
+    background: #ff0000;
+    border: none;
+    font-size: 15px;
+    color: rgb(255 255 255);
+    border-radius: 6px;
+    padding: 3px 38px;
+    align-self: center;
+    margin: 10px;
+    /* font-size: 15px; */
+/* } */
